# ceph-model-s4u

./: .gitignore  .zenodo.json  CMakeLists.txt  GEMINI.md  LICENCE  Snakefile  TODO.md  requirements.txt
archive/: osdmaptool_v17.2.8.patch
archive/map-annex/: cm.txt  extender.py
archive/map-annex/templates/: simple.j2
cmake/Modules/: FetchDigestible.cmake  FetchDmclock.cmake
inputs/: config.yaml  mon_bootstrap.sh
inputs/recipes/: small_cluster.sh
inputs/templates/: buckets.j2  cm_simple.j2  osds.j2
map-annex/: dc1-cm.txt  out-dc1.txt
map-annex/templates/: buckets.j2  osds.j2  pohja.j2
map-visualizer/: crushmap.json  crushmap2graph.py
maps/: cm1  pm1
patches/: dmclock_fix.patch
results/small_cluster/: crushmap.json  crushmap.txt  osdmap.txt  pgdump.txt
src/: CephActor.cpp  CephActor.hpp  CephCommon.cpp  CephCommon.hpp  ClientActor.cpp  ClientActor.hpp  MetricMonitor.cpp  MetricMonitor.hpp  MonActor.cpp  MonActor.hpp  OsdActor.cpp  OsdActor.hpp  SimContext.cpp  SimContext.hpp  ceph-sim.cpp
tools/: compare_results.py  gen_crushmap.py  gen_osdmap.py  sim_analysis.py  visualize.py  visualize_case.py  visualize_scenario.py
